# Riptide

./: .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml  requirements.txt
riptide/: __init__.py  __main__.py  config.py  downloader.py  ffmpeg_tool.py  window.py
yt_dlp_gui/: __init__.py  __main__.py  config.py  downloader.py  window.py
