[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riptide"
version = "1.0.0"
description = "Riptide YouTube Downloader - fast video/audio downloader with ffmpeg support"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "yt-dlp>=2024.0",
]

[project.scripts]
riptide = "riptide:main"
